modify css code and module dependencies

--- a/css/twzipcode.css
+++ b/css/twzipcode.css
@@ -2,6 +2,10 @@
 .addresstw_selection_wrapper{
     display: flex;
 }
+.addresstw_selection_wrapper .form-item{
+    margin: 0px;
+    padding: 0px;
+}
 .twzipcode-address{
     margin-left: 3px;
 }
